--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,15 @@ python:
 	- "3.7"
 	- "3.8"
 
+virtualenv:
+	system_site_packages: true
+
+env: 
+	- DJANGO_VERSION=2.2.4
+
 install: 
+	- pip install -q Django==$DJANGO_VERSION 
+	- python setup.py -q install 
 	- pip install -r requirements.txt 
 
 script: 
