--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ install:
 	- pip install -q Django==$DJANGO_VERSION 
 	- python setup.py -q install 
 	- pip install -r requirements.txt 
+addons: 
+	sonarcloud: 
+		organization: 0ffcebc6dcf00bd31d656bd8f440e592c878a467
 
 script: 
-	-pytest
+	- sonar - scanner 
