--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
 	- pip install -r requirements.txt 
 addons: 
 	sonarcloud: 
-		organization: 0ffcebc6dcf00bd31d656bd8f440e592c878a467
-
+		organization: "csc473"
+		
 script: 
-	- sonar - scanner 
+	- sonar-scanner 
