--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ addons:
 	sonarcloud: 
 		organization: "csc473"
 		token: 
-			secure: "finalproject"
+			secure: finalproject
 		
 script: 
 	- sonar-scanner 
