--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,5 @@
-language: python 
-python: 
-	- "3.4"
-	- "3.5"
-	- "3.6"
-	- "3.7"
-	- "3.8"
+sudo: required
 
-virtualenv:
-	system_site_packages: true
-
-env: 
-	- DJANGO_VERSION=2.2.4
-
-install: 
-	- pip install -q Django==$DJANGO_VERSION 
-	- python setup.py -q install 
-	- pip install -r requirements.txt 
 addons: 
 	sonarcloud: 
 		organization: "csc473"
