--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,26 @@
-sudo: required
+language: python
+python:
+  - "3.4"
+  - "3.5"
+  - "3.6"
+  - "3.7"
+  - "3.8"
 
-addons: 
-	sonarcloud: 
-		organization: "csc473"
+virtualenv:
+  system_site_packages: true
 
-		
-script: 
-	- sonar-scanner 
+env:
+  - DJANGO_VERSION=2.2.4
+
+install:
+  - pip install -q Django==$DJANGO_VERSION
+  - python setup.py -q install
+  - pip install -r requirements.txt
+addons:
+  sonarcloud:
+    organization: "csc473"
+    token:
+      secure: finalproject
+
+script:
+  - sonar-scanner
