travis doesn't work

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ addons:
   sonarcloud:
     organization: "csc473"
     token:
-      secure: finalproject
+      secure: "••••••••••••••••"
 
 script:
   - sonar-scanner
