--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,6 @@ addons:
   sonarcloud:
     organization: "csc473"
     sonar.login: "ebc9c6818f0afa85be66e7023bdf01706b3aad94"
-    sonar.password: ""
 
 script:
-  - sonar-scanner -X
+  - sonar-scanner --debug
