--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
 install:
   - pip install -q Django==$DJANGO_VERSION
   - pip install -U pytest
+  - pip install django-crispy-forms
 
 addons:
   sonarcloud:
@@ -18,4 +19,4 @@ addons:
     sonar.login: "ebc9c6818f0afa85be66e7023bdf01706b3aad94"
 
 script:
-  - sonar-scanner --debug
+  - sonar-scanner
