--- a/sonar-projects.properties
+++ b/sonar-projects.properties
@@ -1,4 +1,4 @@
 #must be unique in a given SonarQube instance
-sonar.projectKey=csc473
+sonar.projectKey=CSC473_FinalProject
 sonar.login=ebc9c6818f0afa85be66e7023bdf01706b3aad94
 sonar.password=""
