--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,7 @@ install:
 addons:
   sonarcloud:
     organization: "csc473"
-    token:
-      secure: "ebc9c6818f0afa85be66e7023bdf01706b3aad94"
+    token: "ebc9c6818f0afa85be66e7023bdf01706b3aad94"
 
 script:
   - sonar-scanner
