--- a/sonar-projects.properties
+++ b/sonar-projects.properties
@@ -1,4 +1,30 @@
 #must be unique in a given SonarQube instance
 sonar.projectKey=CSC473_FinalProject
-sonar.login=ebc9c6818f0afa85be66e7023bdf01706b3aad94
-sonar.password=""
+sonar.organization=csc473
+
+#Name and version in SonarCloud UI
+sonar.projectName=FinalProject
+sonar.projectVersion=1.0
+
+#======
+# Meta-data
+#======
+
+sonar.links.homepage=https://github.com/CSC473/FinalProject
+sonar.links.ci=https://travis-ci.org/github/CSC473/FinalProject
+sonar.links.scm=https://github.com/CSC473/FinalProject
+sonar.links.issue=https://github.com/CSC473/FinalProject/issues
+
+# Path is relative to the sonar-project.properties file. Defaults to .
+sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+sonar.sourceEncoding=UTF-8
+
+# Properties specific to language plugins:
+#   - For JavaScript
+sonar.javascript.lcov.reportPaths=client/coverage/lcov.info
+#   - For Python
+sonar.python.coveragePlugin=cobertura
+sonar.python.coverage.reportPaths=server/coverage.xml
+
