--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 #must be unique in a given SonarQube instance
 sonar.projectKey=CSC473_FinalProject
-sonar.organization=csc473
+sonar.organization=CSC473
 
 #Name and version in SonarCloud UI
 sonar.projectName=FinalProject
