--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
   - pip install -q Django==$DJANGO_VERSION
   - pip install -U pytest
   - pip install django-crispy-forms
+  - pip install coverage
 
 addons:
   sonarcloud:
@@ -21,3 +22,4 @@ addons:
 
 script:
   - sonar-scanner
+  - coverage run __init__.py
