--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ install:
   - pip install -U pytest
   - pip install django-crispy-forms
   - pip install coverage
+  - pip install pytest-django
+
 
 addons:
   sonarcloud:
@@ -23,3 +25,4 @@ addons:
 script:
   - sonar-scanner
   - coverage run calendar_monthly_view/__init__.py
+  - pytest --dc=mysite.settings
