--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = mysite.settings
 python_files = tests.py test_*.py *_tests.py
+addopts = -p no:warnings
 django_find_project = True
