--- a/pytest.ini
+++ b/pytest.ini
@@ -3,4 +3,4 @@ DJANGO_SETTINGS_MODULE = mysite.settings
 python_files = tests.py test_*.py *_tests.py
 addopts = -p no:warnings
 django_find_project = True
-testpaths = tests
+testpaths = calendar_monthly_view/tests
