--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -22,9 +22,8 @@ sonar.sources=.
 sonar.sourceEncoding=UTF-8
 
 # Properties specific to language plugins:
-#   - For JavaScript
-sonar.javascript.lcov.reportPaths=client/coverage/lcov.info
+
 #   - For Python
 sonar.python.coveragePlugin=cobertura
-sonar.python.coverage.reportPaths=server/coverage.xml
+sonar.python.coverage.reportPaths= coverage.xml
 
